@@ -22,6 +22,7 @@ recursive_author_tests('xt');
 requires 'English' => 0;
 requires 'Error::Pure' => 0;
 requires 'Getopt::Std' => 0;
+requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-Schema-Data/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Schema-Data';
 resources 'repository' => 'git://github.com/michal-josef-spacek/App-Schema-Data';
